--- a/video-page.html
+++ b/video-page.html
@@ -73,7 +73,7 @@
         font-style: normal;
         font-size: 18px;
       }
-      span{
+      span {
         color: yellow;
       }
     </style>
@@ -87,8 +87,9 @@
         kuchh special karne ka try kiya hai jaan, i hope tumko ye pasand aayega
         🥰🥰.
         <span
-          >Aur ha jaan dekhne ke baad yaad se google drive me se ushko hata dena
-          warna phir tum samajhne😒😒.
+          >Aur ha jaan dekhne ke baad yaad se google drive me shared wala
+          section me ja ke ushko remove yaad se kar dena warna phir tum
+          samajhna😒😒.
         </span>
         Love you forever ♾️ meri life❤️. Aur ha miss a lot shone😢😞.
         <b>Happy birthday meri life ❤️❤️.</b>
@@ -116,6 +117,10 @@
           window.location.href = "index.html";
         }
       });
+    </script>
+  </body>
+</html>
+
     </script>
   </body>
 </html>
